source powerline status line config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,3 +1,9 @@
+# run powerline daemon
+run-shell "powerline-daemon -q"
+
+# source powerline statusline
+source ~/.local/pipx/venvs/powerline-status/lib/python3.12/site-packages/powerline/bindings/tmux/powerline.conf
+
 # remap prefix from 'C-b' to 'C-a'
 #unbind C-b
 #set-option -g prefix C-a
