tmux zero based index and chez alias

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -9,6 +9,10 @@ source ~/.local/pipx/venvs/powerline-status/lib/python3.12/site-packages/powerli
 #set-option -g prefix C-a
 #bind-key C-a send-prefix
 
+# start windows and panes index at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
